- 
    
Bug
 - 
    Resolution: Done
 - 
    
P2: Important
 - 
    6.2.1
 
- 
        d3b3fef5a8 (qt/qtdeclarative/dev) d3b3fef5a8 (qt/tqtc-qtdeclarative/dev) ddbfe3c9e1 (qt/qtdeclarative/6.4) ddbfe3c9e1 (qt/tqtc-qtdeclarative/6.4)
 
When a QObject is returned to QML as a const pointer it is frozen and properties on that object can't be updated, when we access the same object through a non-const pointer at a later time it is still frozen and we can't update properties on that object.
Short reproducible case: https://github.com/walterbrebels/qobject-frozen
With Qt5 this example works fine. This lead to bugs that are hard to troubleshoot because it's unclear what triggered an object to become frozen when we detect that it can't be modified anymore.