Qml: Allow const and non-const QObjectWrappers to coexist

We can access the same QObject in const and non-const contexts. Both
should be possible. Store the const objectwrapper in
m_multiplyWrappedObjects. That's somewhat slow, but const QObjects are
rather rare.

Fixes: QTBUG-98479
Change-Id: I047afc121f5c29b955cd833e0a2c8299fc52b021
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit d3b3fef5a878d7fd53de6a9f9fff196a273930e3)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>